build with liquidfun

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "box2d"]
 	path = box2d
 	url = https://github.com/erincatto/box2d.git
+[submodule "liquidfun"]
+	path = liquidfun
+	url = https://github.com/google/liquidfun.git
