--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-find_package(Qt5 COMPONENTS Widgets Multimedia OpenGL REQUIRED)
+find_package(Qt5 COMPONENTS Widgets Multimedia OpenGL Svg REQUIRED)
 
 set(BOX2D_VERSION 2.3.0)
 set(BOX2D_BUILD_STATIC TRUE)
@@ -46,5 +46,6 @@ target_link_libraries(rocket
     Qt5::Widgets
     Qt5::Multimedia
     Qt5::OpenGL
+    Qt5::Svg
     )
 
