GameWindowOpenGL uses RasterWindowOpenGL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,6 +100,7 @@ add_executable(rocket
     imgui/imgui_widgets.cpp
     QtImGui.cpp
     ImGuiRenderer.cpp
+    RasterWindowOpenGL.cpp
     GameWindowOpenGL.cpp
     GameState.cpp
     main.cpp
