--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
+enable_testing()
+
 if(WIN32)
     add_definitions(-D_USE_MATH_DEFINES)
 endif()
@@ -18,8 +20,6 @@ set(BOX2D_BUILD_STATIC TRUE)
 add_subdirectory(liquidfun/liquidfun/Box2D/Box2D)
 include_directories(liquidfun/liquidfun/Box2D)
 include_directories(imgui)
-
-enable_testing()
 
 add_library(acd2d STATIC
     acd2d/src/acd2d_data.cpp
@@ -33,6 +33,25 @@ target_include_directories(acd2d
     acd2d/src/mathtool
     acd2d/src/hull
     acd2d/src/edge_visibility
+    )
+
+add_library(imgui_qt STATIC
+    imgui/imgui.cpp
+    imgui/imgui_draw.cpp
+    imgui/imgui_demo.cpp
+    imgui/imgui_widgets.cpp
+    imgui_qt/QtImGui.cpp
+    imgui_qt/ImGuiRenderer.cpp
+    )
+target_link_libraries(imgui_qt
+    PUBLIC
+    Qt5::Widgets
+    Qt5::OpenGL
+    )
+target_include_directories(imgui_qt
+    PUBLIC
+    imgui
+    imgui_qt
     )
 
 add_executable(test_level
@@ -75,33 +94,20 @@ add_test(test_extract_polygons
     test_extract_polygons
     )
 
-add_executable(test_imgui
-    imgui/imgui.cpp
-    imgui/imgui_draw.cpp
-    imgui/imgui_demo.cpp
-    imgui/imgui_widgets.cpp
-    QtImGui.cpp
-    ImGuiRenderer.cpp
-    test_imgui.cpp
+add_executable(test_imgui_qt
+    test_imgui_qt.cpp
     )
-target_link_libraries(test_imgui
-    Qt5::Widgets
-    Qt5::OpenGL
+target_link_libraries(test_imgui_qt
+    imgui_qt
     )
 
 add_executable(test_raster_window
-    imgui/imgui.cpp
-    imgui/imgui_draw.cpp
-    imgui/imgui_widgets.cpp
-    QtImGui.cpp
-    ImGuiRenderer.cpp
     RasterWindowOpenGL.cpp
     test_raster_window.cpp
     shader/shader.qrc
     )
 target_link_libraries(test_raster_window
-    Qt5::Widgets
-    Qt5::OpenGL
+    imgui_qt
     )
 
 add_executable(rocket
@@ -109,11 +115,6 @@ add_executable(rocket
     data_polygons.cpp
     extract_polygons.cpp
     decompose_polygons.cpp
-    imgui/imgui.cpp
-    imgui/imgui_draw.cpp
-    imgui/imgui_widgets.cpp
-    QtImGui.cpp
-    ImGuiRenderer.cpp
     RasterWindowOpenGL.cpp
     GameWindowOpenGL.cpp
     GameState.cpp
@@ -124,10 +125,9 @@ add_executable(rocket
     )
 target_link_libraries(rocket
     Box2D
-    Qt5::Widgets
     Qt5::Multimedia
-    Qt5::OpenGL
     Qt5::Svg
     acd2d
+    imgui_qt
     )
 
